app/assets/stylesheets/styles.css
@font-face {
  font-family: digital;
  src: url('/app/assets/fonts/digital.ttf');
}

/************ splash *************/
.bg {
  background: url("load_clouds.jpg");
  position: fixed;
  height: 1100px;
  width: 100%;
  top: 0;
  left: 0;
  z-index: -1;
}

#load-wrapper {
/*  height: auto;
  width: auto;*/
  text-align: center;
}

#splash {
  color: rgba(44, 62, 80, .9);
  margin-top: 10%;
  font-size: 10em;
}

#content-to-move {
  text-align: center;
  position: absolute;
  top: 200px;
  margin: 0 auto;
  width: 100%;
}

#load-text {
  color: rgba(44, 62, 80, .9);
}

#instructions-text {
  font-family: 'Oxygen', sans-serif;
  margin: 0 auto;
  background: rgba(52, 73, 94, 0.7);
  width: 850px;
  border-radius: 15px;
  padding: 15px;
}

#instructions-text p{
    font-size: 18px;
    line-height: 40px;
    text-align: inline;
}

#instructions {
  color: rgba(236, 240, 241,1.0);
  width: 100%;
  height:auto;
  display: none;
  position: absolute;
  z-index: 100;
}

#load-button {
  width: 180px;
  margin: 0px auto;
  margin-top: 300px;
}

#load-button2 {
  width: 125px;
  margin: 0px auto;
  margin-top: 300px;
}

#space-taker {
  margin-bottom: 300px;
}


.parallax-top {
  height: 250px;
}

.parallax-bottom {
  margin-top: 300px
}

/************ map **************/




/************ body index.html.erb *************/
u {
  text-decoration: none;
  border-bottom: 2px solid;
}

.legend-cloud {
  font-size: 1em;
}

.airport-button {
  /*border: 1px solid;*/
  height: 41px;
  padding-top: 5px;
  width: 205px;
  margin-left: 45px;
}

.airport-lines {
  text-align: center;
}

.airport-lines:hover{
  cursor: pointer;
  background-color: gray;
  border-radius: 5px;
}

.restart-button {
  /*border: 1px solid;*/
  margin-top: 5px;
  width: 205px;
}

.h1-title {
  color: rgba(52, 73, 94,1.0);
  /*border: 1px solid;*/
  margin-left: 50px;
  margin-right: 30px;
}

.nav {
  /*border: 1px solid;*/
  height: 90px;
  margin-left: 40px;
  width: 92%;
}

.nav-li {
  /*border: 1px solid;*/
  margin-top: 10px;
}

.nav-split {
  /*border: 1px solid;*/
  margin-top: 17px;
}

#mantra {
  margin-top: 55px;
  margin-left: 50px;
  color: rgba(52, 73, 94,1.0);
}

.mantra {
  /*border: 1px solid;*/
}

#main-selection {
  width: 159px;
}

.nav-line {
  /*border: 1px solid;*/
  height: 2px;
  margin-left: 50px;
  margin-top: -10px;
  width: 90%;
}

#main-paragraph {
  float: left;
}

.creators {
  color: rgba(26, 188, 156,1.0);
  font-size: 10px;
  margin-left: 600px;
  margin-top: 10px;
}

#ampersand {
  color: rgba(211, 84, 0,1.0);
}

.title {
  padding-left: 5px;
}

.button-div {
  /*border: 1px solid black;*/
  width: 200px;
  float: left;
  margin-left: 15px;
}

.bullet-div {
  /*background: rgba(236, 240, 241,1.0);*/
  /*border: 1px solid;*/
  color: rgba(52, 73, 94,1.0);
  float: left;
  margin-bottom: 10px;
  margin-right: 35px;
  padding: 10px;
  width: 260px;
}

.body-div {
  /*background: rgba(236, 240, 241,1.0);*/
  /*border: 1px solid;*/
  color: rgba(52, 73, 94,1.0);

  margin-left: 25%;
  margin-bottom: 10px;
  padding: 10px;
  width: 700px;
}

.body-title {
  color: rgba(211, 84, 0,1.0);
  float: left;
}

.wrapper-div {
  width: 20%;
  float: left;
}

.body-div p {
  margin-bottom: 10px;
  line-height: 200%;
}

/************ map **************/

body {
  font-family: 'Lato', sans-serif;
  margin: 0;
}

path {
  fill: none;
  stroke: #000;
  stroke-linejoin: round;
  stroke-linecap: round;
}

/************ map **************/

div.transition {
    background-color: #2c3e50;
    transition: background-color 5s linear;
    -moz-transition: background-color 5s linear;
    -o-transition: background-color 5s linear;
    -webkit-transition: background-color 5s linear;
}

div.animate_white {
    background-color: rgba(236, 240, 241,1.0);
}

div.animate_black {
    background-color: #2c3e50;
}



/********* road colors ************/

/*path {
  fill: none;
  stroke: red;
  stroke-linejoin: round;
  stroke-linecap: round;
}*/

.major_road { 
  stroke: #776; 
}
.minor_road { 
  stroke: #776; 
}
.highway { 
  stroke: rgba(127, 140, 141,1.0); stroke-width: 1.8px; 
}

/**************** D3 STUFF *****************/

.map {
  margin: 0px 10px 0px 10px;
  /*width: 100%;*/
  z-index: -1;
}

/*#index-wrapper{
  height: 800px;
  width: 100px;
}*/

#map-div {
  border-radius: 10px;
  margin-left: 40px;
  width: 1200px;
  z-index: 3;
}

#flight-paths {
  z-index: 5;
  position: absolute;
}

#routesewr {
  z-index: 999;
  position: absolute;
}

#routesjfk {
  z-index: 999;
  position: absolute;
}

#routeslga {
  z-index: 999;
  position: absolute;
}

/*********** bootstrap top nav **********/
ul {
  /*background-color: #ecf0f1;*/
  padding: 3px 0px 5px 15px;
}

/*********** side nav legend **********/

.side-legend {
  /*background-color: rgba(236, 240, 241,1.0);*/

  bottom: 400px;
  border-radius: 0px 7px 7px 0px;
  font-size: 18px;
  height: 40px;
  left: 10px;
  margin-left: 90px;
  margin-top: 5px;
  
}

#side-legend {
  padding-right: 10px;
}

#one {
  /*border: 1px solid;*/
  color: rgb(46, 204, 113);
  float: left;
  margin-right: 10px;
}

#two {
  color: rgb(241, 196, 15);
  float: left;
  margin-right: 10px;
}

#three {
  color: rgb(211, 84, 0);
  float: left;
  margin-right: 10px;
}

#four {
  color: rgb(142, 68, 173);
  float: left;
  margin-right: 10px;
}

#five {
  color: rgb(52, 152, 219);
  float: left;
}


/************About us*********/
#aboutus {
  margin-left: 50px;
  margin-top: 50px;
}


#separate {
  height: 2px;
  margin-right: 100px;
}

/*********** timer *************/

#timer-clock {
  color: rgba(52, 73, 94,1.0);
  /*border: 1px solid black;*/
  font-size: 2em;
  margin: 0 auto;  
  padding: 5px 5px 0px 5px;
  width: 230px;
}

